jlamontSC-test/src/objects/MG_Snapshot__c.object
<CustomObject>
    <description>Snapshot to regularly capture all MG Proposals</description>
    <fields>
        <fullName>Closed_Amount_Difference__c</fullName>
        <description>Difference between the captured Closed Amount value and the Closed Amount value on the live opportunity.</description>
        <formula>Opportunity__r.rC_Giving__Closed_Amount__c - Prev_Closed_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closed Amount Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Forecast_Difference__c</fullName>
        <description>Difference between the captured Current Forecast value and the Current Forecast value on the live opportunity.</description>
        <formula>Opportunity__r.Current_Forecast__c - Prev_Current_Forecast__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Forecast Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Renamed since the &quot;Prev&quot; text was getting very confusing on reports.</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>MG Snapshots</relationshipLabel>
        <relationshipName>MG_Snapshots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prev_Account_ID__c</fullName>
        <label>Prev Account ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prev_Account_Name__c</fullName>
        <label>Prev Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prev_Account_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Prev Account Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MG_Snapshots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prev_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Prev Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>MG Snapshots</relationshipLabel>
        <relationshipName>MG_Snapshots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prev_Beginning_Year_Forecast__c</fullName>
        <label>Prev Beginning Year Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prev_Budget_Affecting__c</fullName>
        <label>Prev Budget Affecting</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Budget-Affecting</fullName>
                </value>
                <value>
                    <fullName>Non-Budget Affecting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prev_Close_Date__c</fullName>
        <label>Prev Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Prev_Closed_Amount__c</fullName>
        <label>Prev Closed Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prev_Created_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Prev Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MG_Snapshots2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prev_Created_Date_Time__c</fullName>
        <label>Prev Created Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Prev_Current_Forecast__c</fullName>
        <description>This is a Currency value, not the formula field.  This should provide greater flexibility.</description>
        <label>Prev Current Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prev_Fund_Type__c</fullName>
        <label>Prev Fund Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prev_GAU_Description__c</fullName>
        <label>Prev GAU Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prev_GAU_ID__c</fullName>
        <description>The GAU ID, not the GAU&apos;s SFDC Id.</description>
        <label>Prev GAU ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prev_GAU_Name__c</fullName>
        <label>Prev GAU Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prev_GAU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Prev GAU</label>
        <referenceTo>rC_Giving__GAU__c</referenceTo>
        <relationshipLabel>MG Snapshots</relationshipLabel>
        <relationshipName>MG_Snapshots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prev_Giving_Type__c</fullName>
        <label>Prev Giving Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prev_Include_in_Forecast__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prev Include in Forecast</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prev_Last_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Prev Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MG_Snapshots3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prev_Last_Modified_Date_Time__c</fullName>
        <label>Prev Last Modified Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Prev_Opportunity_ID__c</fullName>
        <label>Prev Opportunity ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prev_Opportunity_Name__c</fullName>
        <label>Prev Opportunity Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prev_Opportunity_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Prev Opportunity Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MG_Snapshots1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prev_Parent_GAU_Description__c</fullName>
        <label>Prev Parent GAU Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prev_Parent_GAU_ID__c</fullName>
        <label>Prev Parent GAU ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prev_Parent_GAU_Name__c</fullName>
        <label>Prev Parent GAU Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prev_Parent_GAU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Prev Parent GAU</label>
        <referenceTo>rC_Giving__GAU__c</referenceTo>
        <relationshipLabel>MG Snapshots (Prev Parent GAU)</relationshipLabel>
        <relationshipName>MG_Snapshots1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prev_Primary_Campaign_Source_Name__c</fullName>
        <label>Prev Primary Campaign Source Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prev_Primary_Campaign_Source__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Prev Primary Campaign Source</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>MG Snapshots</relationshipLabel>
        <relationshipName>MG_Snapshots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prev_Probability__c</fullName>
        <label>Prev Probability</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Prev_Projected_Amount__c</fullName>
        <label>Prev Projected Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prev_Recipient__c</fullName>
        <label>Prev Recipient</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prev_Stage__c</fullName>
        <label>Prev Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Identified</fullName>
                </value>
                <value>
                    <fullName>Qualified</fullName>
                </value>
                <value>
                    <fullName>Solicitation</fullName>
                </value>
                <value>
                    <fullName>Verbal Commitment</fullName>
                </value>
                <value>
                    <fullName>Written Commitment</fullName>
                </value>
                <value>
                    <fullName>Closed Won</fullName>
                </value>
                <value>
                    <fullName>Closed Lost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>MG Snapshot</label>
    <nameField>
        <displayFormat>MGS-{0000000000}</displayFormat>
        <label>MG Snapshot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MG Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>